--- a/options.html
+++ b/options.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Sistrix visibility app: country setup</title>
+	<title>Sistrix Visibility and Metrics Checker: country setup</title>
 	<style>
 		#status, .c {font-weight:bold;}
 		#status { color:green;margin-left: 7px;}
